<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res/android">

    <string name="app_name">iKGK</string>
    <string name="action_settings">Settings</string>
    <string name="marks">Marks</string>
    <string name="substitution">Substitution</string>
    <string name="timetable">Timetable</string>
    <string name="moodle">Moodle</string>
    <string name="canteen">Canteen</string>
    <string name="website">School website</string>
    <string name="backward">Back</string>
    <string name="forward">Forward</string>
    <string name="open">Open in browser</string>
    <string name="refresh">Refresh</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="action">Sign in</string>
    <string name="sign_in_to">Sign in to <xliff:g id="hostname">%s1</xliff:g> \"<xliff:g id="realm">%s2</xliff:g>\"</string>
    <string name="class_dialog_title">Set class…</string>
    <string name="my_class">My class</string>
    <string name="other_class">Other timetable</string>
    <string name="today">Today</string>
    <string name="nextDay">Next day</string>
    <string name="open_preference_title">Enable browser opening</string>
    <string name="general_group_title">General</string>
    <string name="open_preference_summary">Enable to open pages directly in your browser</string>
    <string name="about_group_title">About app</string>
    <string name="author_preference_title">Authors</string>
    <string name="version_preference_title">App version</string>
    <string name="source_label">Source code</string>
    <string name="libs_label">Used libraries</string>
    <string name="change_class_title">Change class</string>
    <string name="change_class_summary">Click to choose different class as default</string>
    <string name="teacher_button_text">Teachers</string>
    <string name="teacher_dialog_title">Set teacher…</string>
    <string name="author_summary">Jakub Šlancar (design), Matouš Hýbl (code)</string>
    <string name="menu_create_shortcut">Create shortcut</string>
    <string name="pref_shortcut_summary">Enable to open shortcuts directly in your browser</string>
    <string name="pref_shortcut_title">Open shortcuts in external browser</string>
    <string name="rate_title">Rate this app</string>
    <string name="share">Share</string>
    <string name="share_dialog_title">Share…</string>
    <string name="theme_dialog_title">Pick color theme</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_summary">Change color theme</string>
    <string name="dialog_restart_title">Restart is required.</string>
    <string name="dialog_restart_message">This app needs to be restarted to change theme</string>
    <string name="notification_lunch_title">Choose your lunch!</string>
    <string name="notification_lunch_content">Month is almost over, lunches are coming.</string>
    <string name="pref_lunch_reminder_title">Remind lunch choosing</string>
    <string name="pref_lunch_reminder_summary">Enable to receive notification when you should choose lunch</string>
    <string name="theme_explanation">We are aware of the fact that not everyone likes the default orange color of our school, some of the people eve hate it. Therefore we integrated a theme switcher, so that everyone can choose the right color that will make using this app an awesome experience.</string>
    <string name="intro_browser_explanation">We\'ve kept in mind that not everyone likes the way that this app handles pages itself although it was designed very efficiently. Therefore we\'ve added option to Settings that let\'s you make the pages being opened in the browser that you normally use on your device.</string>
    <string name="intro_shortcut_explanation">The main goal of this app was speed at which you can get information, but opening the app for every time you wanted to choose your meals is not efficient at all. That\'s why we\'ve added shortcuts. Shortcuts are icons that you can create on your desktop by clicking in each section\'s menu like it is shown in the picture. Then instead of opening this app, simply click on the shortcut and voilà there is the thing that you\'ve wanted to see.</string>
    <string name="previousButtonText">Previous</string>
    <string name="nextButtonText">Next</string>
    <string name="endTitle">Congrats, you are ready to go.</string>
    <string name="end_summary">We hope that you\'ll enjoy using this app and that you\'ll somehow survive studying at this school. If you find a bug please don\'t hesitate to contact me so that I can fix this as soon as possible.</string>
    <string name="extensionButtonText">Our Chrome extension</string>
    <string name="browserTitle">Don\'t like the inbuilt browser?</string>
    <string name="shortcutTitle">So you want to see things even faster?</string>
    <string name="themeTitle">Select a color that you like.</string>
    <string name="typeTitle">Are you a teacher or a student?</string>
    <string name="typeSummary">To bring you an amazing experience using this app we need to know a few things about you.</string>
    <string name="typeSelectClassText">Please select your class</string>
    <string name="finishButton">Finish</string>
    <string name="typeSelectTeacherText">Please select yourself</string>
    <string name="appSummary">Access school webs easier</string>
    <string name="introExplanation">Let\'s go through this simple intro to show you the best features and do some necessary settings.</string>
    <string name="teacher">Teacher</string>
    <string name="pref_intro_title">Launch intro</string>
    <string name="pref_intro_summary">Click to launch intro to show you features and do some settings</string>
    <string name="networkDialogTitle">Network problem</string>
    <string name="networkDialogMessage">Unfortunately, there is no internet connection available. This app requieres internet connection to set up correctly. Please return when there is internet connection available.</string>
    <string name="networkDialogNegativeButton">Close</string>

</resources>
