<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general_group_title">
        <CheckBoxPreference
            android:key="externalBrowserMode"
            android:summary="@string/open_preference_summary"
            android:title="@string/open_preference_title"/>
        <CheckBoxPreference
            android:key="browserShortcut"
            android:summary="@string/pref_shortcut_summary"
            android:title="@string/pref_shortcut_title"/>
        <Preference
            android:key="class"
            android:summary="@string/change_class_summary"
            android:title="@string/change_class_title"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="lunchReminder"
            android:summary="@string/pref_lunch_reminder_summary"
            android:title="@string/pref_lunch_reminder_title"/>

        <Preference
            android:key="theme"
            android:summary="@string/pref_theme_summary"
            android:title="@string/pref_theme_title"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_group_title">
        <Preference
            android:key="author"
            android:summary="@string/author_summary"
            android:title="@string/author_preference_title"/>

        <Preference
            android:key="app_version"
            android:title="@string/version_preference_title"/>

        <Preference
            android:key="source"
            android:title="@string/source_label"/>

        <Preference
            android:key="libs"
            android:title="@string/libs_label"/>
    </PreferenceCategory>
</PreferenceScreen>