<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/backward"
        android:title="@string/backward"/>
    <item
        android:id="@+id/forward"
        android:title="@string/forward"/>
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_navigation_refresh"
        android:title="@string/refresh"
        app:showAsAction="always"/>
    <item
        android:id="@+id/open"
        android:title="@string/open"/>

    <item
        android:id="@+id/shortcut"
        android:title="@string/menu_create_shortcut"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_social_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>

</menu>