<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.mat.hyb.school.kgk.sas.view.MainTile_
            android:id="@+id/marks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            app:text="@string/marks"
            app:tile_icon="@drawable/ic_marks"/>

        <com.mat.hyb.school.kgk.sas.view.MainTile_
            android:id="@+id/substitution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:text="@string/substitution"
            app:tile_icon="@drawable/ic_subst"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <com.mat.hyb.school.kgk.sas.view.MainTile_
            android:id="@+id/timetable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            app:text="@string/timetable"
            app:tile_icon="@drawable/ic_timetable"/>

        <com.mat.hyb.school.kgk.sas.view.MainTile_
            android:id="@+id/moodle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:text="@string/moodle"
            app:tile_icon="@drawable/ic_moodle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <com.mat.hyb.school.kgk.sas.view.MainTile_
            android:id="@+id/canteen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            app:text="@string/canteen"
            app:tile_icon="@drawable/ic_canteen"/>

        <com.mat.hyb.school.kgk.sas.view.MainTile_
            android:id="@+id/website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:text="@string/website"
            app:tile_icon="@drawable/ic_school"/>

    </LinearLayout>


</LinearLayout>